fix: mobile menu z-index

--- a/web/app/themes/twin-tails/resources/styles/layout/header.scss
+++ b/web/app/themes/twin-tails/resources/styles/layout/header.scss
@@ -21,7 +21,7 @@
     height: 2rem;
     cursor: pointer;
     position: relative;
-    z-index: 2;
+    z-index: 21;
 
     > div {
       width: 100%;
@@ -124,7 +124,7 @@
       width: 100%;
       height: 100%;
       background: #fff;
-      z-index: 1;
+      z-index: 20;
       justify-content: center;
       align-items: center;
 
